fixed scrollbar active/inactive in news page

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,11 @@ p {
   color:aliceblue;
 }
 
-.no-scroll {
+.no-scroll-content {
+  overflow: hidden;
+}
+
+.no-scroll-lightbox {
   overflow: hidden;
 }
 
